--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@expo/vector-icons": "^4.0.0",
     "expo": "^15.1.0",
-    "native-base": "^2.1.0",
+    "native-base": "2.1.3",
     "react": "~15.4.0",
     "react-native": "0.42.0",
     "react-navigation": "^1.0.0-beta.9"
